[gd_scene load_steps=11 format=2]

[ext_resource path="res://ui/flowchart_menus/flowchart_theme.tres" type="Theme" id=1]
[ext_resource path="res://menus/upgrade_menu_3/UpgradeMenu3.gd" type="Script" id=2]
[ext_resource path="res://ui/flowchart_menus/BG_red.tres" type="StyleBox" id=3]
[ext_resource path="res://ui/flowchart_menus/icons8-delete-36.png" type="Texture" id=4]
[ext_resource path="res://menus/upgrade_menu_3/Scene1.tscn" type="PackedScene" id=5]
[ext_resource path="res://menus/upgrade_menu_3/Scene2.tscn" type="PackedScene" id=6]
[ext_resource path="res://menus/upgrade_menu_3/Scene3.tscn" type="PackedScene" id=7]
[ext_resource path="res://menus/upgrade_menu_3/Scene4.tscn" type="PackedScene" id=8]
[ext_resource path="res://menus/upgrade_menu_3/Scene5.tscn" type="PackedScene" id=9]
[ext_resource path="res://menus/upgrade_menu_3/Popup.tscn" type="PackedScene" id=10]

[node name="Node" type="Container" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = ExtResource( 1 )
script = ExtResource( 2 )
_sections_unfolded = [ "custom_constants" ]

[node name="MarginContainer" type="MarginContainer" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/margin_right = 40
custom_constants/margin_top = 20
custom_constants/margin_left = 40
custom_constants/margin_bottom = 20
_sections_unfolded = [ "custom_constants" ]

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 40.0
margin_top = 20.0
margin_right = 504.0
margin_bottom = 286.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 464.0
margin_bottom = 266.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/PanelContainer/VBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 464.0
margin_bottom = 36.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_styles/panel = ExtResource( 3 )
_sections_unfolded = [ "Rect", "custom_styles" ]

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/VBoxContainer/PanelContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 4.0
margin_right = 464.0
margin_bottom = 32.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "RichCorp, Inc."
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors", "custom_styles" ]

[node name="ExitButton" type="TextureButton" parent="MarginContainer/PanelContainer/VBoxContainer/PanelContainer" index="1"]

modulate = Color( 1, 1, 1, 0.353569 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 428.0
margin_right = 464.0
margin_bottom = 36.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 8
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 4 )
texture_disabled = ExtResource( 4 )
texture_focused = ExtResource( 4 )
_sections_unfolded = [ "Textures", "Visibility" ]

[node name="ContentContainer" type="MarginContainer" parent="MarginContainer/PanelContainer/VBoxContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 40.0
margin_right = 464.0
margin_bottom = 266.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 3
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10
_sections_unfolded = [ "Size Flags", "custom_constants" ]

[node name="Scene1" parent="MarginContainer/PanelContainer/VBoxContainer/ContentContainer" index="0" instance=ExtResource( 5 )]

editor/display_folded = true
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 10.0
margin_top = 10.0
margin_right = 454.0
margin_bottom = 216.0

[node name="Label" parent="MarginContainer/PanelContainer/VBoxContainer/ContentContainer/Scene1" index="0"]

margin_right = 444.0
margin_bottom = 59.0

[node name="Scene1Continue" parent="MarginContainer/PanelContainer/VBoxContainer/ContentContainer/Scene1" index="1"]

margin_top = 178.0
margin_right = 444.0
margin_bottom = 206.0

[node name="Scene2" parent="MarginContainer/PanelContainer/VBoxContainer/ContentContainer" index="1" instance=ExtResource( 6 )]

editor/display_folded = true
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 10.0
margin_top = 10.0
margin_right = 454.0
margin_bottom = 216.0

[node name="Label" parent="MarginContainer/PanelContainer/VBoxContainer/ContentContainer/Scene2" index="0"]

margin_right = 444.0
margin_bottom = 28.0

[node name="RichTextLabel" parent="MarginContainer/PanelContainer/VBoxContainer/ContentContainer/Scene2" index="1"]

margin_top = 32.0
margin_right = 444.0
margin_bottom = 141.0

[node name="InfoButton" parent="MarginContainer/PanelContainer/VBoxContainer/ContentContainer/Scene2" index="2"]

margin_top = 145.0
margin_right = 444.0
margin_bottom = 174.0

[node name="AgreeButton" parent="MarginContainer/PanelContainer/VBoxContainer/ContentContainer/Scene2" index="3"]

margin_top = 178.0
margin_right = 444.0
margin_bottom = 206.0

[node name="Scene3" parent="MarginContainer/PanelContainer/VBoxContainer/ContentContainer" index="2" instance=ExtResource( 7 )]

editor/display_folded = true
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 10.0
margin_top = 10.0
margin_right = 454.0
margin_bottom = 216.0

[node name="Label" parent="MarginContainer/PanelContainer/VBoxContainer/ContentContainer/Scene3" index="0"]

margin_right = 444.0
margin_bottom = 28.0

[node name="RichTextLabel" parent="MarginContainer/PanelContainer/VBoxContainer/ContentContainer/Scene3" index="1"]

margin_top = 32.0
margin_right = 444.0
margin_bottom = 141.0

[node name="ManageButton" parent="MarginContainer/PanelContainer/VBoxContainer/ContentContainer/Scene3" index="2"]

margin_top = 145.0
margin_right = 444.0
margin_bottom = 174.0

[node name="BackButton" parent="MarginContainer/PanelContainer/VBoxContainer/ContentContainer/Scene3" index="3"]

margin_top = 178.0
margin_right = 444.0
margin_bottom = 206.0

[node name="Scene4" parent="MarginContainer/PanelContainer/VBoxContainer/ContentContainer" index="3" instance=ExtResource( 8 )]

editor/display_folded = true
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 10.0
margin_top = 10.0
margin_right = 454.0
margin_bottom = 216.0

[node name="HBoxContainer" parent="MarginContainer/PanelContainer/VBoxContainer/ContentContainer/Scene4" index="0"]

margin_right = 444.0
margin_bottom = 174.0

[node name="RichTextLabel" parent="MarginContainer/PanelContainer/VBoxContainer/ContentContainer/Scene4/HBoxContainer" index="0"]

margin_right = 400.0
margin_bottom = 174.0

[node name="TextureButton" parent="MarginContainer/PanelContainer/VBoxContainer/ContentContainer/Scene4/HBoxContainer" index="1"]

margin_left = 404.0
margin_right = 444.0
margin_bottom = 174.0

[node name="SaveButton" parent="MarginContainer/PanelContainer/VBoxContainer/ContentContainer/Scene4" index="1"]

margin_top = 178.0
margin_right = 444.0
margin_bottom = 206.0

[node name="Scene5" parent="MarginContainer/PanelContainer/VBoxContainer/ContentContainer" index="4" instance=ExtResource( 9 )]

anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 10.0
margin_top = 10.0
margin_right = 454.0
margin_bottom = 216.0

[node name="Label" parent="MarginContainer/PanelContainer/VBoxContainer/ContentContainer/Scene5" index="0"]

margin_right = 444.0
margin_bottom = 28.0

[node name="FinishButton" parent="MarginContainer/PanelContainer/VBoxContainer/ContentContainer/Scene5" index="1"]

margin_top = 178.0
margin_right = 444.0
margin_bottom = 206.0

[node name="Popup" parent="MarginContainer/PanelContainer" index="1" instance=ExtResource( 10 )]

visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 464.0
margin_bottom = 266.0

[connection signal="pressed" from="MarginContainer/PanelContainer/VBoxContainer/PanelContainer/ExitButton" to="." method="_on_ExitButton_pressed"]

[connection signal="pressed" from="MarginContainer/PanelContainer/VBoxContainer/ContentContainer/Scene1/Scene1Continue" to="." method="_on_Scene1Continue_pressed"]

[connection signal="pressed" from="MarginContainer/PanelContainer/VBoxContainer/ContentContainer/Scene2/InfoButton" to="." method="_on_InfoButton_pressed"]

[connection signal="pressed" from="MarginContainer/PanelContainer/VBoxContainer/ContentContainer/Scene2/AgreeButton" to="." method="_on_AgreeButton_pressed"]

[connection signal="pressed" from="MarginContainer/PanelContainer/VBoxContainer/ContentContainer/Scene3/ManageButton" to="." method="_on_ManageButton_pressed"]

[connection signal="pressed" from="MarginContainer/PanelContainer/VBoxContainer/ContentContainer/Scene3/BackButton" to="." method="_on_BackButton_pressed"]

[connection signal="pressed" from="MarginContainer/PanelContainer/VBoxContainer/ContentContainer/Scene4/SaveButton" to="." method="_on_SaveButton_pressed"]

[connection signal="pressed" from="MarginContainer/PanelContainer/VBoxContainer/ContentContainer/Scene5/FinishButton" to="." method="_on_FinishButton_pressed"]


[editable path="MarginContainer/PanelContainer/VBoxContainer/ContentContainer/Scene1"]
[editable path="MarginContainer/PanelContainer/VBoxContainer/ContentContainer/Scene2"]
[editable path="MarginContainer/PanelContainer/VBoxContainer/ContentContainer/Scene3"]
[editable path="MarginContainer/PanelContainer/VBoxContainer/ContentContainer/Scene4"]
[editable path="MarginContainer/PanelContainer/VBoxContainer/ContentContainer/Scene5"]
